--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,6 +24,7 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version: '1.23'
+          cache-dependency-path: backend/go.sum
           
       - name: Build backend
         run: |
@@ -90,18 +91,13 @@ jobs:
         with:
           targets: ${{ matrix.target }}
           
-      - name: Install musl tools
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y musl-tools
-          if [ "${{ matrix.target }}" = "aarch64-unknown-linux-musl" ]; then
-            sudo apt-get install -y gcc-aarch64-linux-gnu musl-dev
-          fi
+      - name: Install cross
+        run: cargo install cross --git https://github.com/cross-rs/cross
           
-      - name: Build agent
+      - name: Build agent (Static Binary)
         run: |
           cd agent
-          cargo build --release --target ${{ matrix.target }}
+          cross build --release --target ${{ matrix.target }}
           mkdir -p ../dist
           cp target/${{ matrix.target }}/release/sennet ../dist/sennet-${{ matrix.name }}
           
