--- a/agent/Cargo.toml
+++ b/agent/Cargo.toml
@@ -42,6 +42,13 @@ dirs = "5"
 
 # CLI Output
 colored = "2"
+ratatui = "0.29"
+crossterm = "0.28"
+rand = "0.8"
+
+[target.'cfg(target_os = "linux")'.dependencies]
+aya = { version = "0.12", features = ["async_tokio"] }
+libc = "0.2"
 
 [dev-dependencies]
 tempfile = "3"
