--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -96,6 +96,9 @@ jobs:
           
       - name: Build agent (Static Binary)
         run: |
+          echo "Debugging: Full Workspace Listing"
+          ls -R
+          
           echo "Debugging: Listing downloaded artifacts"
           ls -R agent/sennet-ebpf/target
           
