fix(ebpf): use rustc bundled LLVM for bpf-linker compatibility
Changed CI to:
- Add llvm-tools-preview component to nightly toolchain
- Remove system clang/llvm (was causing mismatch)
- Install bpf-linker with --no-default-features to use rustc LLVM

This fixes 'Invalid ELF header size or alignment' error.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -47,13 +47,14 @@ jobs:
       - name: Install Rust
         uses: dtolnay/rust-toolchain@nightly
         with:
-          components: rust-src
+          components: rust-src, llvm-tools-preview
           
       - name: Install dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y clang llvm libelf-dev
-          cargo install bpf-linker
+          sudo apt-get install -y libelf-dev
+          # Install bpf-linker using rustc's bundled LLVM to avoid version mismatch
+          cargo install bpf-linker --no-default-features
           
       - name: Build eBPF
         run: |
