fix(ci): add LLVM dev packages for bpf-linker compilation
Added llvm-19-dev and libpolly-19-dev to fix missing Polly library error.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -52,7 +52,7 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y clang-19 llvm-19 libelf-dev
+          sudo apt-get install -y clang-19 llvm-19 llvm-19-dev libpolly-19-dev libelf-dev
           # Install bpf-linker with matching LLVM version
           cargo install bpf-linker --features llvm-19
           
