--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -45,18 +45,17 @@ jobs:
       - uses: actions/checkout@v4
       
       - name: Install Rust
-        uses: dtolnay/rust-toolchain@master
+        uses: dtolnay/rust-toolchain@nightly
         with:
-          # Pin to nightly that uses LLVM 18
-          toolchain: nightly-2024-06-01
-          components: rust-src
+          # llvm-tools-preview required for rust-llvm feature
+          components: rust-src, llvm-tools-preview
           
       - name: Install dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y clang-18 llvm-18 llvm-18-dev libpolly-18-dev libelf-dev
-          # Install bpf-linker with LLVM 18 to match pinned nightly
-          cargo install bpf-linker --no-default-features --features llvm-18
+          sudo apt-get install -y libelf-dev
+          # Use rust-llvm-21 to use rustc's bundled LLVM (avoids version mismatch)
+          cargo install bpf-linker --no-default-features --features rust-llvm-21,rustc-build-sysroot
           
       - name: Build eBPF
         run: |
@@ -64,7 +63,7 @@ jobs:
           # Build with BTF (BPF Type Format) for aya 0.12+ compatibility
           # -C debuginfo=2: Include debug info for BTF
           # -C link-arg=--btf: Tell bpf-linker to generate BTF sections
-          RUSTFLAGS="-C debuginfo=2 -C link-arg=--btf" cargo +nightly-2024-06-01 build --target bpfel-unknown-none -Z build-std=core --release
+          RUSTFLAGS="-C debuginfo=2 -C link-arg=--btf" cargo +nightly build --target bpfel-unknown-none -Z build-std=core --release
           
       - name: Upload eBPF artifact
         uses: actions/upload-artifact@v4
