fix(ebpf): correct include_bytes path and add sennet-common dependency
- Fixed include_bytes! path in ebpf.rs from ../../sennet-ebpf/ to ../sennet-ebpf/
- Added sennet-common as dependency for struct alignment consistency
- Addresses ELF header alignment issues reported in eBPF loader

--- a/agent/Cargo.toml
+++ b/agent/Cargo.toml
@@ -38,6 +38,9 @@ tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
 anyhow = "1"
 thiserror = "1"
 
+# Shared eBPF types
+sennet-common = { path = "sennet-common" }
+
 # Time handling
 chrono = { version = "0.4", features = ["serde"] }
 
