--- a/agent/Cargo.toml
+++ b/agent/Cargo.toml
@@ -38,6 +38,10 @@ tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
 anyhow = "1"
 thiserror = "1"
 
+# Cryptographic hashing (for upgrade checksum verification)
+sha2 = "0.10"
+hex = "0.4"
+
 # Shared eBPF types
 sennet-common = { path = "sennet-common" }
 
@@ -54,7 +58,8 @@ crossterm = "0.28"
 rand = "0.8"
 
 [target.'cfg(target_os = "linux")'.dependencies]
-aya = { version = "0.13", features = ["async_tokio"] }
+# Note: aya 0.12 matches aya-ebpf 0.1.1 (used in sennet-ebpf)
+aya = { version = "0.12", features = ["async_tokio"] }
 libc = "0.2"
 
 [dev-dependencies]
