--- a/agent/Cargo.toml
+++ b/agent/Cargo.toml
@@ -42,6 +42,13 @@ thiserror = "1"
 sha2 = "0.10"
 hex = "0.4"
 
+# Kubernetes API client (Phase 7)
+kube = { version = "0.87", features = ["runtime", "client", "derive", "ws"] }
+k8s-openapi = { version = "0.20", features = ["v1_28"] }
+
+# Async stream utilities (for K8s watch)
+futures = "0.3"
+
 # Shared eBPF types
 sennet-common = { path = "sennet-common" }
 
